--- a/MyProject/Views/LayoutTest/Index.cshtml
+++ b/MyProject/Views/LayoutTest/Index.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/_LayoutPage.cshtml";
 }
 
+
+@{ Html.RenderPartial("_SysDatePartial");}
+@{ Html.RenderPartial("_SysDatePartial");}
+@{ Html.RenderPartial("_SysDatePartial");}
 <table class="table table-bordered table-striped">
     <tr>
         <td>aa</td>
@@ -16,3 +20,6 @@
         <td>ff</td>
     </tr>
 </table>
+@{ Html.RenderPartial("_SysDatePartial");}
+
+@{ Html.RenderAction("","");}
