--- a/MyProject/Views/Order/InsertOrder.cshtml
+++ b/MyProject/Views/Order/InsertOrder.cshtml
@@ -28,7 +28,10 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.CustId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.CustId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextBox("asdasd");
+                    @Html.TextBoxFor(model => model.CustId)
+
+                  @Html.EditorFor(model => model.CustId, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.CustId, "", new { @class = "text-danger" })
                 </div>
             </div>
